修改容器为undertow 增加etag头

--- a/ruoyi-framework/pom.xml
+++ b/ruoyi-framework/pom.xml
@@ -18,9 +18,22 @@
     <dependencies>
 
         <!-- SpringBoot Web容器 -->
-         <dependency>
+        <!-- web -->
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- undertow -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
         <!-- SpringBoot 拦截器 -->
